--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="home-content">
                 
                 <h3>Hello, It's Me</h3>
-                <h1>MIDHUN V S</h1>
+                <h1>CHANDRA SEKHAR ANAGANI</h1>
                 <h4 style="--i:6">I'm a Engineering student who is<br>
                     passionate in <span class="text"></span></h4>
                 
