Upadte the changes

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 </div>
 
                 <div class="home-sci">
-                    <a href="https://www.linkedin.com/in/midhun-v-s"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/anagani-chandrasekhar"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://instagram.com/midhun_021"style="--i:8" target="_blank"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.youtube.com/@Unlucky_Coder21"style="--i:9" target="_blank"><i class='bx bxl-youtube'></i></a>
-                    <a href="https://github.com/vsmidhun21"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/chandrasekharanagani"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/18UQSFzY9kdABAWTxDMgy_uBmery6-2q_/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1gwjKzb9-zX2Fr1S0CJbVXSFolf8TZLAP/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
@@ -56,7 +56,7 @@
                 </div>
                 <div class="about-text">
                     <h2>About <span>Me</span></h2>
-                    <p>I'm a Smart working engineering student specialized in Electronics and Communication Engineering.
+                    <p>I'm a Smart working engineering student specialized in Information Technology.
                         Along with my degree, I completed Python, SQL, Java, Cybersecurity courses and various technologies.
                         I learnt has helped me develop a project called "Drowsiness Detection & Alerting System".
                         It was during this project that I discovered that I am a team player.
